ajustes no login

--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <link href="css/style.css" rel='stylesheet' type='text/css' />
 <link href="css/style-responsive.css" rel="stylesheet"/>
 <!-- font CSS -->
-<link href='//fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
 <!-- font-awesome icons -->
 <link rel="stylesheet" href="css/font.css" type="text/css"/>
 <link href="css/font-awesome.css" rel="stylesheet">
@@ -171,7 +171,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <ul class="dropdown-menu extended logout">
                 <li><a href="#"><i class=" fa fa-suitcase"></i>Perfil</a></li>
                 <li><a href="#"><i class="fa fa-cog"></i> Configuracoes</a></li>
-                <li><a href="../login/index.html"><i class="fa fa-key"></i> Sair</a></li>
+                <li><a href="../index.html"><i class="fa fa-key"></i> Sair</a></li>
             </ul>
         </li>
         <!-- user login dropdown end -->
@@ -334,8 +334,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</div>
 					<div class="col-md-8 market-update-left">
 						<h4>Vendas</h4>
-						<h3>158.537,89</h3>
-						<p>Meta de R$ 500.000,00 em 2018</p>
+						<h3>100.000</h3>
+						<p>Meta de R$ 500.000 em 2018</p>
 					</div>
 				  <div class="clearfix"> </div>
 				</div>
@@ -346,8 +346,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<i class="fa fa-shopping-cart" aria-hidden="true"></i>
 					</div>
 					<div class="col-md-8 market-update-left">
-						<h4>Vendas mensal</h4>
-						<h3>R$ 20.000,00</h3>
+						<h4>Mensal</h4>
+						<h3>20.000</h3>
 						<p>Meta R$ 50.000,00 mensal</p>
 					</div>
 				  <div class="clearfix"> </div>
@@ -404,45 +404,45 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								<thead>
 									<tr>
 										<th>ITEM</th>
-										<th>EXCURSAO</th>
+										<th>EXCURSÃO</th>
 										<th>STATUS</th>
-										<th>LOTACAO</th>
+										<th>LOTAÇÃO</th>
 									</tr>
 								</thead>
 								<tbody>
 									<tr>
 										<th scope="row">1</th>
-										<td>Salinas 08/02/2018 a 12/02/2018</td>
+										<td>Reveillon São Luis | 29/12/2017 à 02/01/2018</td>
 										<td><span class="label label-success">Em progresso</span></td>
 										<td><h5>85% <i class="fa fa-level-up"></i></h5></td>
 									</tr>
 									<tr>
 										<th scope="row">2</th>
-										<td>Campos do Jordao 04/05/2018 a 12/05/2018</td>
+										<td>Reveillon Fortaleza | 27/12/2017 à 02/01/2018</td>
 										<td><span class="label label-success">Em progresso</span></td>
 										<td><h5>35% <i class="fa fa-level-up"></i></h5></td>
 									</tr>
                   <tr>
 										<th scope="row">3</th>
-										<td>Canada</td>
+										<td>Mini Nordeste | 04 à 15/01/2018</td>
 										<td><span class="label label-success">Em progresso</span></td>
 										<td><h5 class="down">10% <i class="fa fa-level-down"></i></h5></td>
 									</tr>
 									<tr>
 										<th scope="row">4</th>
-										<td>Jeriquaquara</td>
+										<td>Fortaleza com Jericoacoara | 09 à 16/01/2018</td>
 										<td><span class="label label-warning">Nova</span></td>
 										<td><h5 class="down">0% <i class="fa fa-level-down"></i></h5></td>
 									</tr>
                   <tr>
 										<th scope="row">5</th>
-										<td>Italia</td>
+										<td>Sudeste e Sul Fascinante | 03 à 22/01/2018</td>
 										<td><span class="label label-warning">Nova</span></td>
 										<td><h5 class="down">0% <i class="fa fa-level-down"></i></h5></td>
 									</tr>
 									<tr>
 										<th scope="row">6</th>
-										<td>Florianopolis</td>
+										<td>Semana Santa 03| 23/03 à 02/04/2018</td>
 										<td><span class="label label-danger">Cancelada</span></td>
 										<td><h5>12% <i class="fa fa-level-up"></i></h5></td>
 									</tr>
