--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
 <h1>Samistur do Brasil</h1>
 
 <div class="main-w3">
-   <form action="app/index.html" method="post">
         <h2><span class="fa fa-user t-w3" aria-hidden="true"></span></h2>
      <div class="login-w3ls">
          <div class="icons">
@@ -42,10 +41,9 @@
 		         <div class="clear"></div>
 		</div>
 	     <div class="btnn">
-	          <button type="submit" >Entrar</button><br>
+						<a href="app/index.html" class="btn-login">Entrar</a>
         </div>
      </div>
-   </form>
 
  </div>
 
